@@ -27,6 +27,9 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+13-Jan-2010 Hannes Papenberg
+# Fixed JFormFieldAccesslevel and JFormFieldUsergroup - Thanks Christopher Demko!
+
 12-Jan-2010 Mark Dexter
 # Improvements to contact parameters (Elin Waring)
 # Fixes in weblinks router (Elin Waring)
